added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 .Rhistory
 .RData
 .Ruserdata
+AnalyzingWesRAW.nb.html
+AGE11-validation1.Rproj
+May-Notebook2.nb.html
+June2018.nb.html
+June2018.utf8.md
+
+*.html
